@@ -1,3 +1,12 @@
+Tue Aug 16 18:19:13 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_exception/exception_ctor.cpp:
+        
+          Removed generation of the leading double colon for typedef'd
+          basic type names in the exception constructor, since the
+          ACE_NESTED_CLASS macro could be used, and the double colon
+          will be incorrect for the VC6 expansion of the macro.
+
 Mon Aug 15 20:28:14 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
